INJIVER-1535-fix
Signed-off-by: Muskan Rai <184902125+muskanrai-tw@users.noreply.github.com>